03-gitops/apps/03-demo/online-boutique/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-boutique-ingress
  namespace: online-boutique
  annotations:
    cert-manager.io/cluster-issuer: ingress
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: online-boutique.cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
#  tls:
#    - hosts:
#        - online-boutique.cluster
#      secretName: online-boutique-tls
